feat: add custom provider to create user from JWT

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -22,3 +22,5 @@ services:
     abstract: true
     class: DanieleAmbrosino\FirebaseAuthenticationBundle\Security\FirebaseAuthenticator
 
+  firebase_authentication.user_provider:
+    class: DanieleAmbrosino\FirebaseAuthenticationBundle\Security\UserProvider
